[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["UserName <email@address.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.9.0"
isort = "^5.8.0"
ipython = "^7.21.0"
nox = "^2020.12.31"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99

[tool.isort]
profile = 'black'
